@@ -212,6 +212,9 @@ Version 1.6.7
 *******************************************************************************
 
 2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	* The last part of Ronan Menard's patch.
+
+2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* upnp/src/ssdp/ssdp_device.c: Fix for IPV6 ULA/GUA issues.
 	* upnp/src/ssdp/ssdp_ctrlpt.c: Fix for IPV6 ULA/GUA issues.
 	* upnp/src/ssdp/ssdp_server.c: Fix for IPV6 ULA/GUA issues.
